--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,23 @@
 body{
-    font-family: arial;
-    color: #333;
+    font-family: PT Serif;
+    color: #4db6ac;
+    background-image: url("img/pointer_background.jpg");
+    min-height: 300px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 h1{
     font-weight: normal;
-    margin: 20px auto;
-    text-align: center;
-}
-form{
-    width: 500px;
-    margin: 20px auto;
-}
-input{
-    display: block;
-    padding: 8px 16px;
-    font-size: 2em;
     margin: 10px auto;
-    width: 100%;
-    box-sizing: border-box;
-    border-radius: 10px;
-    border: 3px solid #ccc;
-    outline: none !important;
-}
-
-/* validation styles */
-
-input.valid{
-    border-color: #36cc36;
-}
-input.invalid{
-    border-color: orange;
-}
-input + p{
-    font-family: arial;
-    font-size: 0.9em;
-    font-weight: bold;
     text-align: center;
-    margin: 0 10px;
-    color: orange;
-    opacity: 0;
-    height: 0;
 }
-input.invalid + p{
-    opacity: 1;
-    height: auto;
-    margin-bottom: 20px;
+/* label color */
+.input-field label {
+    color: #fb8c00;
+}
+/* helper text */
+.input-field span[class="helper-text"] {
+    color: #fb8c00;
 }
